# advent_of_code_2025

./: .gitignore  pyproject.toml
src/: day1.py  day1_part1.py  day1_part2.py  day2.py  day2_part1.py  day2_part2.py  day3_part1.py  day3_part2.py  day4_part1.py  day4_part2.py  day5_part1.py  day5_part2.py  day6_part1.py  day6_part2.py  day7_part1.py  day7_part2.py  day8_part1.py  day8_part2.py
